# Gocator-ROS1

./: CMakeLists.txt  README.md  package.xml  set_ip.sh
include/kApi/: kApiDef.x.h
launch/: read_depth.launch
meshes/gocator_2330d/: Bracket.STL  Gocator.STL
rviz/: gocator2330d.rviz
src/: read_depth.cpp
urdf/: gocator2330d.urdf
